// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pnpm icon render custom class 1`] = `

<div>
  <svg
    class="custom-class"
    id="a"
    xmlns="http://www.w3.org/2000/svg"
    width="256"
    height="255.98"
    viewbox="0 0 256 255.98"
  >
    <path
      id="b"
      d="M256,79.99h-79.99V0h79.99V79.99h0Z"
    >
    </path>
    <path
      id="c"
      d="M167.99,79.99H88V0h79.99V79.99Z"
    >
    </path>
    <path
      id="d"
      d="M80,79.99H0V0H80V79.99Z"
    >
    </path>
    <path
      id="e"
      d="M256,167.99h-79.99V87.99h79.99v80h0Z"
    >
    </path>
    <path
      id="f"
      d="M167.99,167.99H88V87.99h79.99v80Z"
    >
    </path>
    <path
      id="g"
      d="M167.99,255.98H88v-79.99h79.99v79.99Z"
    >
    </path>
    <path
      id="h"
      d="M256,255.98h-79.99v-79.99h79.99v79.99h0Z"
    >
    </path>
    <path
      id="i"
      d="M80,255.98H0v-79.99H80v79.99Z"
    >
    </path>
  </svg>
</div>

`;

exports[`pnpm icon render default 1`] = `

<div>
  <svg
    id="a"
    xmlns="http://www.w3.org/2000/svg"
    width="256"
    height="255.98"
    viewbox="0 0 256 255.98"
  >
    <path
      id="b"
      d="M256,79.99h-79.99V0h79.99V79.99h0Z"
    >
    </path>
    <path
      id="c"
      d="M167.99,79.99H88V0h79.99V79.99Z"
    >
    </path>
    <path
      id="d"
      d="M80,79.99H0V0H80V79.99Z"
    >
    </path>
    <path
      id="e"
      d="M256,167.99h-79.99V87.99h79.99v80h0Z"
    >
    </path>
    <path
      id="f"
      d="M167.99,167.99H88V87.99h79.99v80Z"
    >
    </path>
    <path
      id="g"
      d="M167.99,255.98H88v-79.99h79.99v79.99Z"
    >
    </path>
    <path
      id="h"
      d="M256,255.98h-79.99v-79.99h79.99v79.99h0Z"
    >
    </path>
    <path
      id="i"
      d="M80,255.98H0v-79.99H80v79.99Z"
    >
    </path>
  </svg>
</div>

`;
